[gd_scene load_steps=39 format=3 uid="uid://csk0rv5ibfuuk"]

[ext_resource type="Script" uid="uid://bfk5mqt5lko4y" path="res://scenes/menus/main_menu.gd" id="1_eci1h"]
[ext_resource type="Texture2D" uid="uid://c21y5e2iccgjq" path="res://art/menus/box_background.png" id="2_0m78c"]
[ext_resource type="FontFile" uid="uid://dwise6tlxxmb" path="res://Fonts/Nunito/static/Nunito-Medium.ttf" id="3_6tew7"]
[ext_resource type="Texture2D" uid="uid://bfvq1jdp6017a" path="res://art/menus/logo_1.png" id="4_4rgjt"]
[ext_resource type="Theme" uid="uid://ln2ffi74l3eg" path="res://resources/custom_theme.tres" id="5_bpy87"]
[ext_resource type="Texture2D" uid="uid://bpf85codekeor" path="res://art/menus/button_play.png" id="5_m312u"]
[ext_resource type="Texture2D" uid="uid://em53f8jwst2o" path="res://art/menus/button_options.png" id="6_wiy3j"]
[ext_resource type="Texture2D" uid="uid://bdqh807sj08uo" path="res://art/menus/button_quit.png" id="7_n54g6"]
[ext_resource type="PackedScene" uid="uid://dq5ntdtxdyc8c" path="res://scenes/menus/settings_menu.tscn" id="9_ygyx6"]
[ext_resource type="Texture2D" uid="uid://bsr527fhwjda4" path="res://art/menus/button_back.png" id="11_n8vdk"]
[ext_resource type="StyleBox" uid="uid://cdqlbxa148orj" path="res://resources/button_focus.tres" id="12_6imgi"]
[ext_resource type="Texture2D" uid="uid://c8rnkk3psusk1" path="res://art/menus/1.png" id="12_n8vdk"]
[ext_resource type="Texture2D" uid="uid://4ik1tvct68bg" path="res://art/menus/2.PNG" id="13_6imgi"]
[ext_resource type="Texture2D" uid="uid://flinkls86054" path="res://art/menus/3.PNG" id="14_1hq2q"]
[ext_resource type="Texture2D" uid="uid://cjk5aavnd4t7c" path="res://art/menus/4.PNG" id="15_wxcro"]
[ext_resource type="Texture2D" uid="uid://8e6g6uq36pci" path="res://art/menus/5.PNG" id="16_y4gey"]
[ext_resource type="Texture2D" uid="uid://ciusfmxhr3aor" path="res://art/menus/6.PNG" id="17_ykxr0"]
[ext_resource type="Texture2D" uid="uid://dn1f8hkg4a3n5" path="res://art/menus/7.PNG" id="18_eeloc"]
[ext_resource type="Texture2D" uid="uid://jlky11b4kpvs" path="res://art/menus/8.PNG" id="19_oina4"]
[ext_resource type="Texture2D" uid="uid://b4vhuedwkih2c" path="res://art/menus/9.PNG" id="20_b4rtx"]
[ext_resource type="Texture2D" uid="uid://cv2inhxdkyqfr" path="res://art/menus/10.PNG" id="21_37lca"]
[ext_resource type="Texture2D" uid="uid://du0gcci425k0u" path="res://art/menus/11.PNG" id="22_4cpr1"]
[ext_resource type="Texture2D" uid="uid://cjqaprj0olaqo" path="res://art/menus/12.PNG" id="23_t83ru"]
[ext_resource type="StyleBox" uid="uid://cghq55g2oqm2g" path="res://resources/transparent_color.tres" id="25_6imgi"]
[ext_resource type="Texture2D" uid="uid://v66l2jed5dcs" path="res://art/player/player_legs.png" id="26_1hq2q"]
[ext_resource type="Texture2D" uid="uid://dhcgep0jgavc2" path="res://art/player/player_head.png" id="27_wxcro"]

[sub_resource type="Curve" id="Curve_jygr6"]
_data = [Vector2(0, 0), 0.0, 0.027516, 0, 0, Vector2(1, 1), -0.0168326, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ke8d4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cd8u6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l52dd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5ykk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ykre"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gujig"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mf7yw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ve26"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7mc1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihvqa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mlnq6"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("Level1Button", "button_texture_list")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_eci1h")
Level1Button = NodePath("LevelSelect/GridContainer/Button1")
button_texture_list = [NodePath("LevelSelect/GridContainer/Button1"), NodePath("LevelSelect/GridContainer/Button2"), NodePath("LevelSelect/GridContainer/Button3"), NodePath("LevelSelect/GridContainer/Button4"), NodePath("LevelSelect/GridContainer/Button5"), NodePath("LevelSelect/GridContainer/Button6"), NodePath("LevelSelect/GridContainer/Button7"), NodePath("LevelSelect/GridContainer/Button8"), NodePath("LevelSelect/GridContainer/Button9"), NodePath("LevelSelect/GridContainer/Button10"), NodePath("LevelSelect/GridContainer/Button11"), NodePath("LevelSelect/GridContainer/Button12")]
smooth_line = SubResource("Curve_jygr6")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.882353, 0.760784, 0.643137, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_0m78c")

[node name="SettingsMenu" parent="." instance=ExtResource("9_ygyx6")]
visible = false

[node name="TitleScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Logo" type="TextureRect" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 322.0
offset_top = 43.0
offset_right = 1528.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.12492, 1.12492)
texture = ExtResource("4_4rgjt")
expand_mode = 2
stretch_mode = 5

[node name="Controls" type="Label" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 276.0
offset_top = 937.0
offset_right = 1676.0
offset_bottom = 1129.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_bpy87")
theme_override_colors/font_color = Color(0.847059, 0.623529, 0.419608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_6tew7")
theme_override_font_sizes/font_size = 48
text = "Requires a controller. Left trigger/bumper to jump, right trigger/bumper to grab, left stick to move, and right stick to control arm."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TitleScreen"]
layout_mode = 0
offset_top = 693.0
offset_right = 1920.0
offset_bottom = 875.0
theme_override_constants/separation = 40
alignment = 1

[node name="ButtonPlay" type="Button" parent="TitleScreen/HBoxContainer"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 75
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ke8d4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cd8u6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l52dd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j5ykk")

[node name="UiPlayButton" type="TextureRect" parent="TitleScreen/HBoxContainer/ButtonPlay"]
layout_mode = 0
offset_left = -98.0
offset_top = -140.0
offset_right = 1950.0
offset_bottom = 1908.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_m312u")

[node name="ButtonOption" type="Button" parent="TitleScreen/HBoxContainer"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 75
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7ykre")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gujig")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mf7yw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5ve26")

[node name="UiOptionsButton" type="TextureRect" parent="TitleScreen/HBoxContainer/ButtonOption"]
layout_mode = 0
offset_left = -98.0
offset_top = -141.0
offset_right = 1950.0
offset_bottom = 1907.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_wiy3j")

[node name="ButtonQuit" type="Button" parent="TitleScreen/HBoxContainer"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 75
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7ykre")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gujig")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mf7yw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5ve26")

[node name="UiQuitButton" type="TextureRect" parent="TitleScreen/HBoxContainer/ButtonQuit"]
layout_mode = 0
offset_left = -97.0
offset_top = -141.0
offset_right = 1951.0
offset_bottom = 1907.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_n54g6")

[node name="LevelSelect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1920.0
offset_right = 1920.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectYourLevel" type="Label" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 930.0
offset_top = 217.0
offset_right = 1478.0
offset_bottom = 327.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.98736, 0.957039, 0.931485, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_6tew7")
theme_override_font_sizes/font_size = 80
text = "Choose a level!"
horizontal_alignment = 1

[node name="ButtonBack" type="Button" parent="LevelSelect"]
layout_mode = 0
offset_left = 305.0
offset_top = 176.0
offset_right = 698.0
offset_bottom = 390.0
focus_neighbor_left = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource("5_bpy87")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p7mc1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ihvqa")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mlnq6")

[node name="Texture" type="TextureRect" parent="LevelSelect/ButtonBack"]
layout_mode = 0
offset_left = -117.0
offset_top = -171.0
offset_right = 1931.0
offset_bottom = 1877.0
scale = Vector2(0.3, 0.3)
theme = ExtResource("5_bpy87")
texture = ExtResource("11_n8vdk")

[node name="GridContainer" type="GridContainer" parent="LevelSelect"]
layout_mode = 2
offset_left = 254.0
offset_top = 442.0
offset_right = 1954.0
offset_bottom = 982.0
scale = Vector2(0.824263, 0.824263)
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 6

[node name="Button1" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
layout_mode = 2
focus_neighbor_left = NodePath(".")
theme = ExtResource("5_bpy87")
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("12_n8vdk")
icon_alignment = 1
expand_icon = true

[node name="Button2" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("13_6imgi")
icon_alignment = 1
expand_icon = true

[node name="Button3" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("14_1hq2q")
icon_alignment = 1
expand_icon = true

[node name="Button4" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("15_wxcro")
icon_alignment = 1
expand_icon = true

[node name="Button5" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("16_y4gey")
icon_alignment = 1
expand_icon = true

[node name="Button6" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("17_ykxr0")
icon_alignment = 1
expand_icon = true

[node name="Button7" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
focus_neighbor_left = NodePath(".")
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("18_eeloc")
icon_alignment = 1
expand_icon = true

[node name="Button8" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("19_oina4")
icon_alignment = 1
expand_icon = true

[node name="Button9" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
text = "
"
icon = ExtResource("20_b4rtx")
icon_alignment = 1
expand_icon = true

[node name="Button10" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("21_37lca")
icon_alignment = 1
expand_icon = true

[node name="Button11" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("22_4cpr1")
icon_alignment = 1
expand_icon = true

[node name="Button12" type="Button" parent="LevelSelect/GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
focus_next = NodePath(".")
theme = ExtResource("5_bpy87")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("12_6imgi")
icon = ExtResource("23_t83ru")
icon_alignment = 1
expand_icon = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="ControllerMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="ControllerMenu"]
layout_mode = 0
offset_left = -1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 300

[node name="HBoxContainer" type="HBoxContainer" parent="ControllerMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Panel" type="Panel" parent="ControllerMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("25_6imgi")

[node name="VBoxContainer" type="VBoxContainer" parent="ControllerMenu/MarginContainer/HBoxContainer/Panel"]
layout_mode = 0
offset_right = 303.0
offset_bottom = 630.0

[node name="Label" type="Label" parent="ControllerMenu/MarginContainer/HBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("5_bpy87")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Keyboard + Mouse"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="ControllerMenu/MarginContainer/HBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayerLegs" type="TextureRect" parent="ControllerMenu/MarginContainer/HBoxContainer/Panel/VBoxContainer/Control"]
layout_mode = 2
offset_left = -52.0
offset_top = 116.0
offset_right = 1308.0
offset_bottom = 979.0
scale = Vector2(0.073736, 0.073736)
texture = ExtResource("26_1hq2q")

[node name="PlayerHead" type="TextureRect" parent="ControllerMenu/MarginContainer/HBoxContainer/Panel/VBoxContainer/Control"]
layout_mode = 1
offset_left = -71.0
offset_top = 18.0
offset_right = 1289.0
offset_bottom = 1215.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("27_wxcro")

[node name="HBoxContainer" type="HBoxContainer" parent="ControllerMenu/MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Label" type="Label" parent="ControllerMenu/MarginContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_bpy87")
text = "Is playing:"

[node name="CheckBox" type="CheckBox" parent="ControllerMenu/MarginContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_bpy87")

[node name="Panel2" type="Panel" parent="ControllerMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel3" type="Panel" parent="ControllerMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel4" type="Panel" parent="ControllerMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel5" type="Panel" parent="ControllerMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ControllerMenu"]
layout_mode = 0
offset_left = -1058.0
offset_right = -828.0
offset_bottom = 45.0
theme = ExtResource("5_bpy87")
text = "Manage Players"

[node name="ButtonBack" type="Button" parent="ControllerMenu"]
layout_mode = 0
offset_left = -1168.0
offset_top = 835.0
offset_right = -775.0
offset_bottom = 1049.0
focus_neighbor_left = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource("5_bpy87")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p7mc1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ihvqa")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mlnq6")

[node name="Texture" type="TextureRect" parent="ControllerMenu/ButtonBack"]
layout_mode = 0
offset_left = -117.0
offset_top = -171.0
offset_right = 1931.0
offset_bottom = 1877.0
scale = Vector2(0.3, 0.3)
theme = ExtResource("5_bpy87")
texture = ExtResource("11_n8vdk")

[connection signal="pressed" from="TitleScreen/HBoxContainer/ButtonPlay" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TitleScreen/HBoxContainer/ButtonOption" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="TitleScreen/HBoxContainer/ButtonQuit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LevelSelect/ButtonBack" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button11" to="." method="_on_button_11_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Button12" to="." method="_on_button_12_pressed"]
[connection signal="pressed" from="ControllerMenu/ButtonBack" to="." method="_on_back_button_pressed"]
